--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,10 +24,12 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   height: 100vh;
+  overflow-x: hidden;
 }
 
 button:disabled {
