--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -55,7 +55,7 @@ button:disabled {
   backdrop-filter: blur(5px);
 }
 
-.custom-height {
+.custom_height {
   min-height: calc(100vh - 114px);
   padding-bottom: 60px;
   @include mixin.media(640px) {
@@ -66,7 +66,13 @@ button:disabled {
     padding-bottom: 0;
     min-height: calc(100vh - 500px);
   }
+
+  background-image: url(../assets/imgs/hero-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px -30px;
 }
+
 
 .swiper-pagination-bullet-active {
   background: #120A44 !important;
